erDiagram
    PLAYERS {
        uuid id PK "internal.players.id"
        varchar(20) name "NOT NULL"
        int job "NOT NULL, DEFAULT 1 (Apprentice)"
        int level "NOT NULL, DEFAULT 1"
        int exp "NOT NULL, DEFAULT 0"
        int max_hp "NOT NULL, DEFAULT 1"
        int max_mp "NOT NULL, DEFAULT 0"
        int strength "NOT NULL, DEFAULT 0"
        int defense "NOT NULL, DEFAULT 0"
        int intelligence "NOT NULL, DEFAULT 0"
        int luck "NOT NULL, DEFAULT 0"
        int speed "NOT NULL, DEFAULT 0"
        int training_battle_count "NOT NULL, DEFAULT 0"
        timestamptz training_cooldown_until "NULL"
    }
    CHAT_ROOMS {
        uuid owner_id PK, FK "internal.players.id"
        int last_chat_id "NOT NULL, DEFAULT 0"
    }
    CHAT_MESSAGES {
        uuid owner_id PK, FK "internal.chat_rooms.owner_id"
        uuid sender_id FK "internal.players.id, NOT NULL"
        int chat_id PK "NOT NULL"
        varchar(200) message "NOT NULL"
        timestamptz created_at "NOT NULL, DEFAULT CURRENT_TIMESTAMP"
    }

    PLAYERS ||--|| CHAT_ROOMS : owns
    CHAT_ROOMS ||--o{ CHAT_MESSAGES : has
